Server/esp_server/build/log/idf_py_stderr_output_5186
fatal: no submodule mapping found in .gitmodules for path 'esp-idf/components/cJSON'
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'app_main':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:158:5: error: expected declaration or statement at end of input
  158 |     xTaskCreate(tcp_server_task, "tcp_server", 4096, NULL, 5, NULL);
      |     ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
